[FIX] Sections white space fixed for dark mode view

--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,10 @@
   background-color: var(--very-dark-blue-BG);
 }
 
+.theme-switch__input:checked ~ footer {
+  --very-dark-blue-BG: var(--lime-green);
+}
+
 .theme-switch__input:checked ~ .theme-switch__label span::after {
   transform: translateX(25px);
 }
@@ -145,9 +149,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-  position: relative;
-  top: -110px;
-  bottom: 0;
+  margin-top: -110px;
   height: 350px;
 }
 
@@ -220,9 +222,7 @@ figure {
 }
 
 .overview-results {
-  position: relative;
-  bottom: 0;
-  top: -110px;
+  padding-bottom: 50px;
 }
 
 .card-2__container {
@@ -291,7 +291,7 @@ footer .attribution {
 }
 
 .attribution a:hover {
-  color: var(--lime-green);
+  color: var(--bright-red);
 }
 
 @media (max-width: 375px) {
